@@ -13,8 +13,10 @@ TESTS = tst-pam_limits
 
 securelibdir = $(SECUREDIR)
 secureconfdir = $(SCONFIGDIR)
+limits_conf_dir = $(SCONFIGDIR)/limits.d
 
 AM_CFLAGS = -I$(top_srcdir)/libpam/include -I$(top_srcdir)/libpamc/include \
+	-DLIMITS_FILE_DIR=\"$(limits_conf_dir)/*.conf\" \
 	-DLIMITS_FILE=\"$(SCONFIGDIR)/limits.conf\"
 AM_LDFLAGS = -no-undefined -avoid-version -module \
 	-L$(top_builddir)/libpam -lpam
@@ -32,3 +34,5 @@ README: pam_limits.8.xml limits.conf.5.xml
 -include $(top_srcdir)/Make.xml.rules
 endif
 
+install-data-local:
+	mkdir -p $(DESTDIR)$(limits_conf_dir)
