@@ -3,9 +3,9 @@ Linux-PAM NEWS -- history of user-visible changes.
 
 Release X.XX.X.X
 
-* Add translations for ar, ca, da, ru, sv and zu
-* Update hungarian translation
-
+* Add translations for ar, ca, da, ru, sv and zu.
+* Update hungarian translation.
+* Add support for limits.d directory to pam_limits.
 
 Release 0.99.7.1
 
